fix stats spacing

--- a/src/assets/sass/layout.scss
+++ b/src/assets/sass/layout.scss
@@ -152,10 +152,10 @@
 
 			#stats .stats__items {
 				flex-wrap: wrap;
-				margin: 0 0 0 10%;
+				margin: 0 5% 0 10%;
 
 				@media screen and (min-width: 992px) {
-					margin: 0 0 0 20%;
+					margin: 0 5% 0 20%;
 				}
 
 				> li {
